WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235717
AX: Remove ancestor flag initialized ASSERT in AXIsolatedObject::initializeAttributeData
https://bugs.webkit.org/show_bug.cgi?id=235717
Summary
AX: Remove ancestor flag initialized ASSERT in AXIsolatedObject::initializeAt...
Tyler Wilcock
Reported
2022-01-27 08:22:50 PST
This ASSERT is not useful, since after
https://bugs.webkit.org/show_bug.cgi?id=235189
we do a single traversal to compute all flags in the rare cases they aren't already initialized.
Attachments
Patch
(2.10 KB, patch)
2022-01-27 08:25 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-01-27 08:23:06 PST
<
rdar://problem/88134004
>
Tyler Wilcock
Comment 2
2022-01-27 08:25:36 PST
Created
attachment 450140
[details]
Patch
EWS
Comment 3
2022-01-27 12:08:39 PST
Committed
r288693
(
246491@main
): <
https://commits.webkit.org/246491@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 450140
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug