AX: Remove ancestor flag initialized ASSERT in AXIsolatedObject::initializeAttributeData https://bugs.webkit.org/show_bug.cgi?id=235717

Reviewed by Andres Gonzalez.

This patch removes:

ASSERT(isRoot || object.ancestorFlagsAreInitialized());

From AXIsolatedObject::initializeAttributeData.

This ASSERT is not very useful, since after
https://bugs.webkit.org/show_bug.cgi?id=235189 we do a single
traversal to compute all flags in the rare but legitimate cases
they aren't already initialized.

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::initializeAttributeData):



Canonical link: https://commits.webkit.org/246491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288693 268f45cc-cd09-0410-ab3c-d52691b4dbfc